# agent-cli

./: .gitignore  README.md  agent.json  agent_runtime.py  cli.py  config_manager.py  main.py  pyproject.toml  run_api.py  run_cli.py  self_test_console_output.py  skills_support.py  terminal_display.py  tools.py
.agents/: store.sqlite
agents/: __init__.py  agent.py  exec.py  executor_agent.py  observer_agent.py  runtime.py  single_agent.py  supervisor_agent.py  system_tasks.py  tools.py
android/: gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
api/: app.py
mcp/: config.json
memory/: __init__.py  manager.py  model.py  paths.py  query.py  storage.py  worker.py
memory/pageindex/: config.yaml  utils.py
skills/: skills_manager.py  skills_state.py  skills_support.py
skills/packmol-skill/: SKILL.md
skills/packmol-skill/references/: input_format.md
skills/packmol-skill/scripts/: create_mixture.sh  packmol_wrapper.py
system/: __init__.py  manager.py  scheduler.py  schedules.py  tasks.py  terminal_display.py
ui/: config.js  index.html
workspace/.agents/: skills_state.json
workspace/core/: identity.md  soul.md  traits.md  user.md
workspace/memory/chats/2026-02-03/: 2026-02-03T135548Z_se9713ec3372a_t0001.md  2026-02-03T135600Z_se9713ec3372a_t0002.md  2026-02-03T140528Z_s7dfb867ac90f_t0001.md  2026-02-03T140637Z_s7dfb867ac90f_t0002.md  2026-02-03T141319Z_s7dfb867ac90f_t0003.md  (+7 more)
workspace/skills/packmol-skill/: README.md
workspace/workspace/memory/: identity.md  traits.md  user.md
(+14 files in other folders)
