[project]
name = "skills-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.5",
    "deepagents>=0.3.6",
    "deepagents-cli>=0.0.3",
    "dotenv>=0.9.9",
    "langchain-deepseek>=1.0.1",
    "langchain[openai]>=1.2.6",
    "langchain-mcp-adapters>=0.2.1",
    "numpy>=2.4.1",
    "pybel>=0.15.5",
    "rdkit>=2025.9.3",
    "setuptools>=80.10.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
